add grpc authorization and logger
